added data fetching and set origin access to all

--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
     <header></header>
     <main>
         <h1>Hello, world!</h1>
+        <button id="getButton">Button</button>
     </main>
-    <footer></footer>
+    <footer>
+        <script src="scripts/test.js"></script>
+    </footer>
 </body>
 </html>
