--- a/index.html
+++ b/index.html
@@ -4,12 +4,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
     <header></header>
     <main>
-        <h1>Hello, world!</h1>
-        <button id="getButton">Button</button>
+        <h1>Swoos Secret Button Archive</h1>
+        <button class="button" id="getButton">Load</button>
+        <div class="section">
+            <label>Command<input id="commandInput" type="text" placeholder="command" required></label>
+            <label>Command Data<input id="commandDataInput" type="text" placeholder="command data" maxlength="16" required></label>
+            <button class="button" id="addButton">Add</button>
+        </div>
+        <div>
+            <label>Target User<input type="text" placeholder="target userId" pattern="[0-9]+" required></label>
+            <table id="commandTable">
+                <thead>
+                    <tr>
+                        <th>Commands</th>
+                        <th>Command Data</th>
+                    </tr>
+                </thead>
+                <tbody id="commandBody">
+                    
+                </tbody>
+            </table>
+        </div>
     </main>
     <footer>
         <script src="scripts/test.js"></script>
